--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@ layout: landing-page
 
 				<header class="special container">
 					<span class="icon fa-bar-chart-o"></span>
-					<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+					<h2>This is my <strong>in construction</strong> website
 					<br />
-					I decided to give it a really creative name.</h2>
-					<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-					<br />
-					it's minimally designed, fully responsive, built on HTML5/CSS3/<strong>skel</strong>,
-					and, like all my stuff,
-					<br />
-					released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
-				</header>
-					
+
+				<!--	
 				<!-- One -->
 					<section class="wrapper style2 container special-alt">
 						<div class="row half">
@@ -168,3 +161,4 @@ layout: landing-page
 				</footer>
 			
 			</section>
+-->
