--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<h2>Daniella Roberts</h2>
 						</header>
 						<br>
-								<span class="avatar"><img src="images/lupy.jpg" alt=""/></span>
+								<span class="avatar"><img src="images/lupy.JPG" alt=""/></span>
 						<br />
 								<p>Physics Graduate Student</p>
 						<p> <strong>Lupy</strong>
