Changed things in index

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<!-- <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1> -->
+					<h1 id="logo"><a href="index.html"> Daniella Roberts</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">About me</a></li>
+							<li class="current"><a href="#main">About me</a></li>
+							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="cv.html">Outreach</a></li>
+							<li class="current"><a href="cv.html">CV</a></li>
+
 							<!-- <li class="submenu">
 								<a href="#">Layouts</a>
 								 <ul>
@@ -40,7 +44,7 @@
 									</li>
 								</ul> -->
 							</li>
-							<li><a href="#" class="button primary">email me</a></li>
+							<li><a href="contact.html" class="button primary">email me</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -68,7 +72,7 @@
 						I own two guinea pigs: Deacon and Comet
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">About Me</a></li>
 							</ul>
 						</footer>
 
@@ -80,7 +84,7 @@
 			<!-- Main -->
 
 
-				<!-- <article id="main">
+				<article id="main">
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
@@ -93,7 +97,7 @@
 						and, like all my stuff,
 						<br />
 						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
-					</header> -->
+					</header>
 
 					<!-- One -->
 
