--- a/index.html
+++ b/index.html
@@ -22,29 +22,11 @@
 						<ul>
 							<li class="current"><a href="#main">About me</a></li>
 							<li class="current"><a href="index.html">Research</a></li>
-							<li class="current"><a href="cv.html">Outreach</a></li>
-							<li class="current"><a href="cv.html">CV</a></li>
+							<li class="current"><a href="outreach.html">Outreach</a></li>
+							<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
 
-							<!-- <li class="submenu">
-								<a href="#">Layouts</a>
-								 <ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul> -->
 							</li>
-							<li><a href="contact.html" class="button primary">email me</a></li>
+							<li><a href="contact.html" class="button primary"> Contact Me </a></li>
 						</ul>
 					</nav>
 				</header>
@@ -66,10 +48,24 @@
 						<br>
 								<span class="avatar"><img src="images/lupy.JPG" alt=""/></span>
 						<br />
-								<p>Physics Graduate Student</p>
-						<p> <strong>Lupy</strong>
+								<p> Physics Ph.D. Candidate </p>
+						<p> <strong> The Ohio State University</strong> </p>
 						<br />
-						I own two guinea pigs: Deacon and Comet
+								<p> I study galaxies that are smaller than the Milky Way
+									<br />
+									in stellar mass in order to test different
+									<br />
+									ΛCDM predictions.
+
+									<!-- I currently focus on statistically counting
+							    <br />
+								 	the number of satellites these galaxies have in order to test
+									<br />
+									hierarchy or structure. -->
+								</p>
+
+
+
 						<footer>
 							<ul class="buttons stacked">
 								<li><a href="#main" class="button fit scrolly">About Me</a></li>
@@ -87,181 +83,43 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<!-- <span class="icon solid fa-chart-bar"></span> -->
+						<span class="icon solid fa-anchor"></span>
+						<h2>Hi! I'm currently a physics PhD candidate at <strong>The Ohio Sate University</strong> studying the smallest galaxies
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						</h2>
+						<p> I grew up between Quito, Ecuador and Miami, FL for the first 17 years of my life. I then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
+						</p>
+  					<br />
+						<p>
+						<strong>Fun facts about me </strong>
+						<br />
+						My favorite place in the world is Key West, FL and the Florida Keys
+						<br />
+						I'm a pround guinea pig mom to Deacon and Comet
+						<br />
+						I love to ice skate in my free time
+						<br />
+						I really enjoy playing on aerial silks
+						<br />
+						I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities.
+						<br />
+						I love playing the ukulele, violin, and learning new instruments
+						</p>
+
+
+						<br />
+
+
+
+							<!-- <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
 						<br />
 						it's minimally designed, fully responsive, built on HTML5/CSS3,
 						and, like all my stuff,
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p> -->
 					</header>
 
-					<!-- One -->
-
-
-						<!-- <section class="wrapper style2 container special-alt">
-							<div class="row gtr-50">
-								<div class="col-8 col-12-narrower">
-
-									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
-									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-									<footer>
-										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
-										</ul>
-									</footer>
-
-								</div>
-								<div class="col-4 col-12-narrower imp-narrower">
-
-									<ul class="featured-icons">
-										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon solid fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon solid fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
-									</ul>
-
-								</div>
-							</div>
-						</section> -->
-
-					<!-- Two -->
-
-
-
-						<!-- <section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>This is Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<span class="icon solid featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
-							</div>
-						</section> -->
-
-					<!-- Three -->
-
-
-
-						<!-- <section class="wrapper style3 container special">
-
-							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
-							</header>
-
-							<div class="row">
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-											<h3>A Really Fast Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>An Airport Terminal</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Hyperspace Travel</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>And Another Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-							</div>
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
-								</ul>
-							</footer>
-
-						</section>
-
-				</article> -->
-
-
-
-			<!-- CTA -->
-
-
-				<!-- <section id="cta">
-
-					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
-					</header>
-					<footer>
-						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
-						</ul>
-					</footer>
-
-				</section> -->
 
 
 
@@ -271,8 +129,10 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+
 					</ul>
 
 					<ul class="copyright">
