Updated research, contact, and index

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
 
 							<li class="current"><a href="index.html#main">About me</a></li>
-							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="research.html">Research</a></li>
 							<li class="current"><a href="outreach.html">Outreach</a></li>
 							<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
 
@@ -55,7 +55,7 @@
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Daniella Roberts </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
