--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="#main">About me</a></li>
-							<li class="current"><a href="index.html">Research</a></li>
+							<li class="current"><a href="right-sidebar.html">Research</a></li>
 							<li class="current"><a href="outreach.html">Outreach</a></li>
 							<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
-
-							</li>
 							<li><a href="contact.html" class="button primary"> Contact Me </a></li>
 						</ul>
 					</nav>
@@ -86,40 +84,41 @@
 						<!-- <span class="icon solid fa-chart-bar"></span> -->
 						<span class="icon solid fa-anchor"></span>
 						<h2>Hi! I'm currently a physics PhD candidate at <strong>The Ohio Sate University</strong> studying the smallest galaxies
-						<br />
 						</h2>
-						<p> I grew up between Quito, Ecuador and Miami, FL for the first 17 years of my life. I then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
-						</p>
-  					<br />
-						<p>
-						<strong>Fun facts about me </strong>
-						<br />
-						My favorite place in the world is Key West, FL and the Florida Keys
-						<br />
-						I'm a pround guinea pig mom to Deacon and Comet
-						<br />
-						I love to ice skate in my free time
-						<br />
-						I really enjoy playing on aerial silks
-						<br />
-						I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities.
-						<br />
-						I love playing the ukulele, violin, and learning new instruments
-						</p>
 
-
-						<br />
-
-
-
-							<!-- <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p> -->
 					</header>
 
+					<!-- One -->
+						<section class="wrapper style2 container special-alt">
+							<div class="row gtr-50">
+									<p> I grew up between Quito, Ecuador and Miami, FL for the first 17 years of my life. I then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
+									</p>
+			  					<br />
+									<p>
+									<strong>Fun facts about me </strong>
+									<br />
+									My favorite place in the world is Key West, FL and the Florida Keys
+									<br />
+									I'm a pround guinea pig mom to Deacon and Comet
+									<br />
+									I love to ice skate in my free time
+									<br />
+									I really enjoy playing on aerial silks
+									<br />
+									I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities.
+									<br />
+									I love playing the ukulele, violin, and learning new instruments
+									</p>
+
+
+									<footer>
+										<ul class="buttons">
+											<li><a href="research.html" class="button"> Research </a></li>
+										</ul>
+									</footer>
+
+								</div>
+							</section>
 
 
 
@@ -130,8 +129,8 @@
 
 					<ul class="icons">
 						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/daniella-roberts-33466a101/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
 
 					</ul>
 
