--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Twenty by HTML5 UP</title>
+		<title>Daniella Roberts Research</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,30 +17,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">Daniella Roberts</a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li class="current"><a href="index.html#main">About me</a></li>
+							<li class="current"><a href="right-sidebar.html">Research</a></li>
+							<li class="current"><a href="outreach.html">Outreach</a></li>
+							<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
+							<li><a href="contact.html" class="button primary"> Contact Me </a></li>
 						</ul>
 					</nav>
 				</header>
@@ -49,9 +33,10 @@
 				<article id="main">
 
 					<header class="special container">
-						<span class="icon solid fa-tablet-alt"></span>
-						<h2>Behold the <strong>Right Sidebar</strong></h2>
-						<p>Where things on the right ... accompany that on the left.</p>
+						<span class="icon solid fa-laptop"></span>
+
+						<h2><strong>Research</strong></h2>
+						<p> ΛCDM cosmology predicts a structural hiearchy, meaning that what we observe at large scales should also be seen at small scales.</p>
 					</header>
 
 					<!-- One -->
@@ -63,13 +48,13 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-												<header>
-													<h3>Dolore Amet Consequat</h3>
+												<a href="#" class="image featured"><img src="images/host_satellites.jpg" alt="" /></a>
+												<!-- <header>
+													<h3>hi</h3>
 												</header>
-												<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-												<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-												<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
+												<p>
+													hello
+												</p> -->
 											</section>
 										</div>
 
@@ -80,28 +65,16 @@
 										<div class="sidebar">
 											<section>
 												<header>
-													<h3>Magna Feugiat</h3>
+													<h3> Satellite Luminosity Function of Low-Mass Host Galaxies </h3>
 												</header>
 												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-												<footer>
+												<!-- <footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Learn More</a></li>
 													</ul>
-												</footer>
+												</footer> -->
 											</section>
 
-											<section>
-												<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-												<header>
-													<h3>Amet Lorem Tempus</h3>
-												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-												<footer>
-													<ul class="buttons">
-														<li><a href="#" class="button small">Learn More</a></li>
-													</ul>
-												</footer>
-											</section>
 										</div>
 
 								</div>
@@ -109,7 +82,8 @@
 						</section>
 
 					<!-- Two -->
-						<section class="wrapper style1 container special">
+
+						<!-- <section class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
@@ -157,7 +131,7 @@
 
 								</div>
 							</div>
-						</section>
+						</section> -->
 
 				</article>
 
@@ -165,15 +139,13 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/daniella-roberts-33466a101/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Daniella Roberts </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
