Updated index, and research

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
-									<p> I grew up between Quito, Ecuador and Miami, FL for the first 17 years of my life. I then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
+									<p> I grew up between Quito, Ecuador and Key West, FL for the first 17 years of my life. I finished high school in Miami, Fl and then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
 									</p>
 			  					<br />
 									<p>
 									<strong>Fun facts about me </strong>
 									<br />
-									My favorite place in the world is Key West, FL and the Florida Keys
+									My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though.
 									<br />
 									I'm a pround guinea pig mom to Deacon and Comet
 									<br />
@@ -107,7 +107,7 @@
 									<br />
 									I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities.
 									<br />
-									I love playing the ukulele, violin, and learning new instruments
+									I love playing the ukulele, violin, and learning new instruments. I hope to pick up the banjo at some point.
 									</p>
 
 
@@ -130,7 +130,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/daniella-roberts-33466a101/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/daniella-roberts/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
 
 					</ul>
 
