--- a/research.html
+++ b/research.html
@@ -29,14 +29,18 @@
 					</nav>
 				</header>
 
+				<section id="banner_R">
+
 			<!-- Main -->
 				<article id="main">
 
 					<header class="special container">
 						<span class="icon solid fa-laptop"></span>
-
 						<h2><strong>Research</strong></h2>
-						<p> ΛCDM cosmology predicts a structural hiearchy, meaning that what we observe at large scales should also be seen at small scales.</p>
+						<p> <strong>
+							I study satellite galaxies of hosts with low stellar mass, between the Large Magellanic Cloud and the Milky Way.
+								These galaxies allow us to further understand hierarchical structure formation, where small structures merged together to form the large objects we see today, and also understand what the universe is made of.
+							</strong></p>
 					</header>
 
 					<!-- One -->
@@ -45,16 +49,13 @@
 							<div class="row gtr-150">
 								<div class="col-8 col-12-narrower">
 
-									<!-- Content -->
+									<!-- Content: Just the image -->
 										<div class="content">
 											<section>
 												<a href="#" class="image featured"><img src="images/host_satellites.jpg" alt="" /></a>
 												<!-- <header>
 													<h3>hi</h3>
-												</header>
-												<p>
-													hello
-												</p> -->
+												</header> -->
 											</section>
 										</div>
 
@@ -62,24 +63,35 @@
 								<div class="col-4 col-12-narrower">
 
 									<!-- Sidebar -->
+
 										<div class="sidebar">
 											<section>
 												<header>
 													<h3> Satellite Luminosity Function of Low-Mass Host Galaxies </h3>
 												</header>
-												<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
+												<p>	Recently, I used the COSMOS survey to study satellite galaxy populations of hosts with stellar mass 9.5 < log(M_*/M_⊙) < 10.5 at redshifts 0.1 < z < 0.8. Using a bayesian statistical analysis, we were able to measure the hosts satellite luminosity function (number of satellites per host as a function of magnitude) by detecting a satellite overdensity signal above that of the background/foreground objects.
+												</p>
 												<!-- <footer>
 													<ul class="buttons">
 														<li><a href="#" class="button small">Learn More</a></li>
 													</ul>
 												</footer> -->
 											</section>
-
 										</div>
-
-								</div>
 							</div>
-						</section>
+						</div>
+
+						<!-- Content -->
+							<div class="content">
+								<section>
+									<p>
+									This is the first study of low-mass host satellite systems across cosmic time! And is important because it allows us to test hierarchical galaxy formation in  ΛCDM, the current cosmology that supports our models of galaxy formation.
+									</p>
+								</section>
+							</div>
+
+
+					</section>
 
 					<!-- Two -->
 
@@ -141,7 +153,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/daniella-roberts-33466a101/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/daniella-roberts/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
