updated index and research, added fornax cluster

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 									<br />
 									My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though.
 									<br />
-									I'm a pround guinea pig mom to Deacon and Comet
+									I'm a proud guinea pig mom to Deacon and Comet
 									<br />
 									I love to ice skate in my free time
 									<br />
