--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 					<header class="special container">
 						<span class="icon solid fa-envelope"></span>
 						<h2>Get In Touch</h2>
-						<p>Feel free to contact me! My e-mail is in my CV. If you're at OSU, you can always stop by my office in the Physics Research Building M2007. </p>
+						<p>Feel free to contact me! My e-mail is roberts.1611@osu.edu, and if you're at OSU you can always stop by my office in the Physics Research Building M2007. </p>
 					</header>
 
 
@@ -50,8 +50,8 @@
 
 					<ul class="icons">
 						<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+						<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/daniella-roberts/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
 					</ul>
 
 					<ul class="copyright">
