--- a/outreach.html
+++ b/outreach.html
@@ -2,12 +2,113 @@
 
 <html>
 	<head>
-		<title>Here is where my CV will go</title>
+		<title>outreach and teaching</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-</html>
+
 
 <body class="no-sidebar is-preload">
+	<div id="page-wrapper">
+
+		<!-- Header -->
+			<header id="header">
+				<h1 id="logo"><a href="index.html">Daniella Roberts</a></h1>
+				<nav id="nav">
+					<ul>
+						<li class="current"><a href="index.html#main">About me</a></li>
+						<li class="current"><a href="research.html">Research</a></li>
+						<li class="current"><a href="outreach.html">Outreach</a></li>
+						<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
+						<li><a href="contact.html" class="button primary"> Contact Me </a></li>
+					</ul>
+				</nav>
+			</header>
+
+				<article id="main">
+
+					<header class="special container">
+						<span class="icon solid fa-star"></span>
+						<h2>Outreach & Teaching</strong></h2>
+						<!-- <p>Where that in the center faces the nameless horrors alone.</p> -->
+					</header>
+
+
+					<!-- One -->
+						<section class="wrapper style4 container">
+
+					<!-- Content -->
+						<div class="content">
+							<section>
+								<header>
+									<h3>Outreach</h3>
+								</header>
+
+								<p>Our research group is very active on instagram and twitter! We usually post about graduate student life and the type of research we do. We hope to show our followers the many different faces of people in physics. <BR/>
+
+						<a href="https://twitter.com/HowWeScience" class="icon brands fa fa-twitter"style='font-size:58px'>
+
+						<a href="https://www.instagram.com/HowWeScience/" class="icon brands circle fa fa-instagram" style='font-size:58px'><span class="label"></span></a>
+
+								<BR/>
+
+								For the past year I have also been a co-host of the STEMcoding astronomy YouTube series, where we explain physics and astronomy concepts through coding. <BR/>
+
+								<p></p>
+
+								<a href="https://u.osu.edu/stemcoding/" class="button small">STEMcoding</a>
+
+								</p>
+
+								<BR/>
+
+								<header>
+									<h3>Teaching</h3>
+								</header>
+								<p>During my time as a graduate student I have been a Teaching Assistant for introductory astronomy and introductory physics recitations/labs, teaching both calculus-based and algebra-based electromagnetism. For these classes I worked out problems during recitation, led lab sessions, graded, and held office hours.
+								</p>
+
+
+
+
+							</section>
+						</div>
+
+						</section>
+
+
+				</article>
+
+
+				<!-- Footer -->
+					<footer id="footer">
+
+						<ul class="icons">
+							<li><a href="https://twitter.com/daniella_astro" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/daniellaro" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/daniella-roberts/" class="icon brands circle fa-linkedin"><span class="label">linkedIn</span></a></li>
+						</ul>
+
+						<ul class="copyright">
+							<li>&copy; Daniella Roberts </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+
+					</footer>
+
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
