--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html#main">About me</a></li>
-							<li class="current"><a href="right-sidebar.html">Research</a></li>
+							<li class="current"><a href="research.html">Research</a></li>
 							<li class="current"><a href="outreach.html">Outreach</a></li>
 							<li class="current"><a href="cv_roberts_tex.pdf">CV</a></li>
 							<li><a href="contact.html" class="button primary"> Contact Me </a></li>
