--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
-									<p> I grew up between Quito, Ecuador and Key West, FL for the first 17 years of my life. I finished high school in Miami, Fl and then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015.
+									<p> I grew up between Quito, Ecuador and Key West, FL for the first 17 years of my life. I finished high school in Miami, FL and then attended Florida International University where I recieved a B.S. in Physics and minor in Astronomy in 2015
 									</p>
 			  					<br />
 									<p>
 									<strong>Fun facts about me </strong>
 									<br />
-									My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though.
+									My favorite place in the world is Key West, FL and the Florida Keys. Hawaii is a very close second though
 									<br />
 									I'm a proud guinea pig mom to Deacon and Comet
 									<br />
@@ -105,9 +105,9 @@
 									<br />
 									I really enjoy playing on aerial silks
 									<br />
-									I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities.
+									I'm a volunteer for 4 paws for ability, an organization which helps train dogs for children with disabilities
 									<br />
-									I love playing the ukulele, violin, and learning new instruments. I hope to pick up the banjo at some point.
+									I love playing the ukulele, violin, and learning new instruments. I hope to pick up the banjo at some point
 									</p>
 
 
