--- a/outreach.html
+++ b/outreach.html
@@ -48,11 +48,15 @@
 
 								<p>Our research group is very active on instagram and twitter! We usually post about graduate student life and the type of research we do. We hope to show our followers the many different faces of people in physics. <BR/>
 
-						<a href="https://twitter.com/HowWeScience" class="icon brands fa fa-twitter"style='font-size:58px'>
+								<p></p>
 
-						<a href="https://www.instagram.com/HowWeScience/" class="icon brands circle fa fa-instagram" style='font-size:58px'><span class="label"></span></a>
+						<a href="https://twitter.com/HowWeScience" class="icon brands circle fa-twitter"><span class="label"></span></a>
+
+						<a href="https://www.instagram.com/HowWeScience/" class="icon brands circle fa-instagram"><span class="label"></span></a>
 
 								<BR/>
+
+								<p></p>
 
 								For the past year I have also been a co-host of the STEMcoding astronomy YouTube series, where we explain physics and astronomy concepts through coding. <BR/>
 
