updated small about me section

--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
 						<br>
 								<span class="avatar"><img src="images/lupy.JPG" alt=""/></span>
 						<br />
-								<p> Physics Ph.D. Candidate </p>
+								<p> I obtained my Ph.D. in Physics in 2022 from </p>
 						<p> <strong> The Ohio State University</strong> </p>
 						<br />
-								<p> I study galaxies that are smaller than the Milky Way
+								<p> My thesis dissertation was on identifying satellite galaxy populations
+									of low-mass dwarf galaxies with the Hubble Space Telescope
 									<br />
-									in stellar mass in order to test different
-									<br />
-									ΛCDM predictions.
+									and the Dark Energy Survey.
 
 									<!-- I currently focus on statistically counting
 							    <br />
